# graphpro

./: .gitignore  README.md  pyproject.toml  pytest.ini  readthedocs.yaml  requirements.txt  test-requirements.txt
.github/workflows/: python-app.yml
docs/: api.rst  conf.py  get-started.rst  index.rst  install.rst  requirements.txt
src/graphpro/: __init__.py  annotations.py  collection.py  graph.py  graphgen.py  model.py
src/graphpro/util/: conservation.py  dssp.py  energy.py  modes.py  polarity.py  residues.py  sasa.py
test/graphpro/: annotations_test.py  collection_test.py  graph_test.py  graphgen_test.py  model_test.py
test/graphpro/annnotations/: conformation_test.py  conservation_test.py  dssp_test.py  energy_test.py  modes_test.py
test/graphpro/representation/: knn_test.py
