[project]
name = "graphpro"
authors = [
  { name="Pegerto Fernandez", email="pegerto@gmail.com" },
]
description = "A python module to handle graph protein data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",

    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dynamic = ["dependencies", "version"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graphpro"]

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[project.urls]
"Homepage" = "https://github.com/pegerto/graphpro"
"Bug Tracker" = "https://github.com/pegerto/graphpro"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
